# template_asm_stl_algorithm

./: .gitignore  README.md
src/: BUILD.gn  main.cc
src/algorithm/java/: settings.gradle
src/asm/: BUILD.gn
src/asm/helloworld/: main.s
src/compiler/toy/: BUILD.gn  test.toy  toy.cpp
src/compiler/toy/parser/: lexer.cpp  lexer.h
src/template/chp00/: operator_overload.hpp
src/template/chp01/: max.hpp
src/template/chp02/: stack.hpp  stack_default.hpp  stack_partial.hpp  stack_string.hpp
src/template/chp03/: stack_auto.hpp  stack_nontype.hpp
src/template/chp04/: fold_expression.hpp  print.hpp  varidic_class.hpp
src/template/chp05/: array.hpp  stack_final.hpp
src/template/chp06/: Person.hpp  forward.hpp  forward_person.hpp
src/template/chp11/: foreach.hpp
src/test/template/: BUILD.gn
src/test/template/chp00/: decltype_test.cpp  operator_overload_test.cpp
src/test/template/chp01/: max_test.cpp
src/test/template/chp02/: stack_test.cpp
src/test/template/chp03/: stack_auto_test.cpp  stack_nontype_test.cpp
src/test/template/chp04/: all_test.cpp
src/test/template/chp05/: array_test.cpp  stack_final_test.cpp
src/test/template/chp06/: forward_person_test.cpp  forward_test.cpp
src/test/template/chp11/: foreach_test.cpp
