group("main") {
  public_deps = [
    "asm:asm_all"
  ]
}

config("internal_config") {
  # Only targets in this file and its subdirs can depend on this.
  visibility = [ "./*" ]

  include_dirs = [
    ".",
    "template/chp01",
    "template/chp02"
  ]
}

executable("all_tests") {
  testonly = true

  sources = [
    "test/template/chp01/max_test.cpp",
    "test/template/chp02/stack_test.cpp",
  ]
  
  configs += [ ":internal_config" ]
  
  deps = [
    "//third_party/googletest:gtest",
    "//third_party/googletest:gtest_main",
  ]
}
