group("main") {
  public_deps = [
    "asm:asm_all"
  ]
}

config("internal_config") {
  # Only targets in this file and its subdirs can depend on this.
  visibility = [ "./*" ]

  include_dirs = [
    ".",
    "template/chp01",
    "template/chp02",
    "template/chp03"
  ]
  
  cflags_cc =[
    "-Wno-sign-compare"
  ]
}

executable("all_tests") {
  testonly = true

  sources = [
    "test/template/chp01/max_test.cpp",
    "test/template/chp02/stack_test.cpp",
    "test/template/chp03/stack_nontype_test.cpp",
    "test/template/chp03/stack_auto_test.cpp",
  ]
  
  configs += [ ":internal_config" ]
  
  deps = [
    "//third_party/googletest:gtest",
    "//third_party/googletest:gtest_main",
  ]
}
