group("main") {
  public_deps = [
    "asm:asm_all"
  ]
}

config("internal_config") {
  # Only targets in this file and its subdirs can depend on this.
  visibility = [ "./*" ]

  include_dirs = [
    ".",
    "template/chp01",
    "template/chp02",
    "template/chp03"
  ]
  
  cflags_cc =[
    "-Wno-sign-compare"
  ]
}

group("all_tests") {
  testonly = true
  
  deps = [
    "//src/test/template:template_tests"
  ]
}
