
config("template_config") {
  # Only targets in this file and its subdirs can depend on this.
  visibility = [ "./*" ]

  include_dirs = [
    "//src/template/chp01",
    "//src/template/chp02",
    "//src/template/chp03",
    "//src/template/chp04"
  ]
  
  cflags_cc =[
    "-Wno-sign-compare"
  ]
}

executable("template_tests") {
  testonly = true
  
  sources = [
    "chp01/max_test.cpp",
    "chp02/stack_test.cpp",
    "chp03/stack_nontype_test.cpp",
    "chp03/stack_auto_test.cpp",
    "chp04/all_test.cpp",
  ]
  
  configs += [ ":template_config" ]
  
  deps = [
    "//third_party/googletest:gtest",
    "//third_party/googletest:gtest_main",
  ]
}